<resources>
    <string name="app_name">BaseAndroid</string>

    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="finish">完成</string>
    <string name="ensure">确定</string>
    <string name="cancle">取消</string>
    <string name="quit">退出</string>

    <string name="unit">元</string>
    <string name="custom_price">自定义</string>

    <string name="title_psw_forget">忘记密码</string>
    <string name="title_order_submit">确认订单</string>
    <string name="title_review_big_pic">查看大图</string>
    <string name="title_order">订单列表</string>
    <string name="title_order_refund">退款详情</string>
    <string name="title_order_transport">物流详情</string>
    <string name="title_order_refund_all">退货退款</string>
    <string name="title_discount_card">优惠券</string>
    <string name="title_discount_card_choose">选择优惠券</string>
    <string name="title_batch_forward">批量转发</string>
    <string name="title_address">地址管理</string>
    <string name="title_address_add">新增收货地址</string>
    <string name="title_address_edit">编辑收货地址</string>

    <string name="tab_home">首页</string>
    <string name="tab_discover">发现</string>
    <string name="tab_buy">购物车</string>
    <string name="tab_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_psw">请输入密码</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_newPsw">请输入新密码6~8位</string>
    <string name="hint_inviteCode">请输入邀请码</string>
    <string name="hint_address_person_name">请输入收货人的姓名</string>
    <string name="hint_address_person_phone">请输入收货人的手机号码</string>
    <string name="hint_address_person_detail">请输入收货人的详细地址</string>

    <string name="psw_forget">忘记密码?</string>
    <string name="code_send">获取验证码</string>
    <string name="inviteCode_to_get">如何获取邀请码？</string>
    <string name="protocol_agree">我已阅读并同意</string>
    <string name="protocol_note">《用户协议》</string>

    <string name="inviteCode_tip1">1.关注 众妆美库 微信公众号。</string>
    <string name="inviteCode_tip2">2.回复【邀请码】即得限量邀请码。</string>

    <string name="session_hot_brand">人气品牌</string>
    <string name="session_end">专场结束时间</string>
    <string name="session_share">批量转发</string>
    <string name="session_join">进入专场</string>
    <string name="session_title">专场</string>

    <string name="download">下载</string>
    <string name="download_tip01">下载图片到您的相册</string>
    <string name="download_tip02">复制文案到您的粘贴板</string>

    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="share_wx">微信</string>
    <string name="share_circle">朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_qq">QQ</string>

    <string name="product_specs">规格</string>
    <string name="product_num">数量</string>
    <string name="product_up">+</string>
    <string name="product_down">-</string>
    <string name="product_buy">立即购买</string>
    <string name="product_buy_all">全选</string>
    <string name="product_batch_forward">批量转发(%s)</string>


    <string name="order_total_num">共%s件商品</string>
    <string name="order_total_money">合计</string>
    <string name="order_submit">提交订单</string>
    <string name="order_transport_money">运费</string>
    <string name="order_transport_money_empty">免运费</string>
    <string name="order_sale_cash">优惠券</string>
    <string name="order_sale_cash_empty">暂无可用</string>
    <string name="order_total_money_2">小计</string>
    <string name="order_total_money_3">应付总额:</string>
    <string name="order_pay">去付款</string>
    <string name="order_refund">退款</string>
    <string name="order_refund_about">退款详情</string>
    <string name="order_refund_no">退货单号:</string>
    <string name="order_refund_time">申请时间:</string>
    <string name="order_refund_money">退款金额:</string>
    <string name="order_refund_progress">当前进度</string>
    <string name="order_refund_progress_02">当前进度:</string>
    <string name="order_refund_answer">平台回复:</string>
    <string name="order_refund_detail_get_fail_title">获取退款详情失败</string>
    <string name="order_refund_detail_get_fail_msg">是否重新获取</string>
    <string name="order_review">查看订单</string>
    <string name="order_confrim">确认收货</string>
    <string name="order_transport">查看物流</string>
    <string name="order_comment">评论</string>
    <string name="order_delete">删除订单</string>
    <string name="order_mine">我的订单</string>
    <string name="order_mine_all">查看全部订单</string>
    <string name="order_to_money">待付款</string>
    <string name="order_to_transport">待发货</string>
    <string name="order_to_reciver">待收货</string>
    <string name="order_to_service">售后服务</string>
    <string name="order_dot">*</string>
    <string name="order_refund_reason">退款原因</string>
    <string name="order_refund_detail">问题描述:</string>
    <string name="order_refund_reason_choose">请选择</string>
    <string name="order_refund_pic">上传凭证(最多三张)</string>
    <string name="order_refund_reason_empty">请选择退款原因</string>
    <string name="order_refund_dialog_title">退货原因</string>
    <string name="order_refund_dialog_succeed_title">提交成功</string>
    <string name="order_no">订单编号</string>
    <string name="order_money">订单金额</string>
    <string name="order_pay_type">支付方式</string>


    <string name="toast_login_phone_empty">请输入手机号码</string>
    <string name="toast_login_phone_un_right">请输入正确的手机号码</string>
    <string name="toast_login_psw_empty">请输入密码</string>
    <string name="toast_auth_code_empty">请输入验证码</string>
    <string name="toast_auth_code">验证码发送成功</string>
    <string name="toast_protocol_check">请阅读并同意《用户协议》</string>
    <string name="toast_out_of_shop_max_num">您已经购买最大数量</string>
    <string name="toast_delete_product">是否删除该商品</string>
    <string name="toast_add_shopcar_succeed">商品成功添加到购物车！</string>
    <string name="toast_choose_product">请选择商品！</string>
    <string name="toast_choose_share_goods">请您选择批量转发的商品</string>
    <string name="toast_un_empty">请输入完整信息</string>

    <string name="lv_loading">正在加载数据中...</string>
    <string name="lv_data_empty">当前暂无数据</string>
    <string name="lv_net_error">获取数据失败，点击屏幕重试</string>
    <string name="lv_shopcar_empty">您的购物车还没添加宝贝哦</string>
    <string name="lv_discount_card_empty">您还没有优惠券哦</string>

    <string name="sale_money">销售额</string>
    <string name="sale_num">今日订单数</string>
    <string name="setting_to_cash">提现管理</string>
    <string name="setting_to_location">地址管理</string>
    <string name="setting_to_discount_card">我的优惠券</string>
    <string name="setting_to_line">联系客服</string>
    <string name="setting_to_app">系统设置</string>

    <string name="address_add">添加地址</string>
    <string name="address_add_two">还没有收货地址呢，去添加</string>
    <string name="address_choose">请选择</string>
    <string name="address_set_normal">设为默认</string>
    <string name="address_set_delete">删除</string>
    <string name="address_set_edit">编辑</string>
    <string name="address_set_default_title">是否设置为默认地址</string>
    <string name="address_set_delete_title">是否删除该地址</string>
    <string name="address_person_name">收货人</string>
    <string name="address_person_phone">联系电话</string>
    <string name="address_person_address">所在地址</string>
    <string name="address_person_address_detail">详细地址</string>
    <string name="address_person_set_default">设置为默认地址</string>
    <string name="address_choose_fail">获取地理数据失败，请重新获取</string>
    <string name="address_set_succeed">设置地址成功</string>
    <string name="address_update_succeed">修改地址成功</string>
    <string name="address_set_fail">设置地址失败，请重试</string>
    <string name="address_update_fail">修改地址失败，请重试</string>
    <string name="address_user_name">收货人:%s</string>


    <string name="save_bitmap_succeed">保存成功</string>
    <string name="save_bitmap_succeed_todo">分享图片已经保存在相册</string>
    <string name="save_bitmap_permission_fail">保存图片失败</string>
    <string name="save_bitmap_permission_todo">请去系统设置里打开权限</string>

    <string name="album">相册</string>
    <string name="choose_pic">选择图片</string>
    <string name="choose_pic_from_album">我的相册中选择</string>
    <string name="choose_pic_from_camera">拍摄</string>
    <string name="choose_pic_permission_fail">选取图片失败</string>
    <string name="choose_pic_permission_todo">请去系统设置里打开权限</string>

    <string name="id_dialog">请补全身份信息</string>
    <string name="id_title">身份证:</string>
    <string name="id_hint">请填写身份证号码</string>
    <string name="id_pic_title">(请上传身份证正反面照片)</string>
    <string name="id_choose_pic">请上传身份证正反面照片</string>
    <string name="id_commit">提交</string>

    <string name="discount_card_empty">暂无可使用的优惠券</string>
</resources>
