<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.user.UserPasswordForgetActivity">

    <include layout="@layout/common_navigation_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/input_container_bg"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.juggist.baseandroid.view.ClearEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:background="@null"
            android:maxLength="11"
            android:paddingBottom="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:textCursorDrawable="@color/font_select"
            android:textSize="@dimen/sp_26"
            app:textHint="@string/hint_phone"
            app:textLeftDrawableNormal="@drawable/register_icon_phone"
            app:textLeftDrawableSelect="@drawable/register_icon_phone_pre"
            app:textSize="26" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:background="@drawable/input_container_bg">

        <Button
            android:id="@+id/btn_code_send"
            android:layout_width="@dimen/dp_170"
            android:layout_height="@dimen/dp_48"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/btn_corner_stroke_bg"
            android:text="@string/code_send"
            android:textColor="@color/font_select"
            android:textSize="@dimen/sp_26"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.juggist.baseandroid.view.ClearEditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="11"
            android:paddingBottom="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_40"
            android:paddingRight="@dimen/dp_10"
            android:paddingTop="@dimen/dp_20"
            android:textCursorDrawable="@color/font_select"
            android:textSize="@dimen/sp_26"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_code_send"
            app:textHint="@string/hint_code"
            app:textLeftDrawableNormal="@drawable/register_icon_number"
            app:textLeftDrawableSelect="@drawable/register_icon_number_pre"
            app:textSize="26" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:background="@drawable/input_container_bg"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.juggist.baseandroid.view.ClearEditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:background="@null"
            android:maxLength="11"
            android:paddingBottom="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:textCursorDrawable="@color/font_select"
            android:textSize="@dimen/sp_26"
            app:textHint="@string/hint_newPsw"
            app:textLeftDrawableNormal="@drawable/register_icon_password"
            app:textLeftDrawableSelect="@drawable/register_icon_password_pre"
            app:textSize="26" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_90"
        android:layout_marginLeft="@dimen/dp_75"
        android:layout_marginRight="@dimen/dp_75"
        android:layout_marginTop="@dimen/dp_110"
        android:background="@drawable/btn_corner_bg"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_32" />
</LinearLayout>